argocd/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
      - websecure
    routes: 
      - match: Host(`argocd.infra.sprint.luchtenberg.eu`)
        kind: Rule
        services:
          - name: argocd-server
            port: 443
    tls:
      secretName: argocd-infra-sprint-luchtenberg-eu-tls
